<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_alert_dialog">

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_value_ten"
        android:text="@string/attention"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_eighteen"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alertMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_value_ten"
        android:paddingStart="@dimen/default_value_ten"
        android:paddingEnd="@dimen/default_value_ten"
        android:text="@string/alert_msg"
        android:textColor="@color/default_color"
        android:textSize="@dimen/text_size_fourteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertTitle" />

    <TextView
        android:id="@+id/alertPositiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_value_ten"
        android:layout_marginEnd="@dimen/default_value_thirty"
        android:paddingBottom="@dimen/default_value_twenty"
        android:text="@string/positive_button"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>